@@ -1,3 +1,8 @@
+2014-07-31  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/61964
+	* gcc.dg/torture/pr61964.c: New testcase.
+
 2014-07-31  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR c++/60517
